# pychat

./: .gitignore  README.md  convoAI.py  fe.py  pyproject.toml
scripts/: chat_api.py  messages.py
